--- a/src/type.css
+++ b/src/type.css
@@ -1,31 +1,31 @@
 @font-face {
   font-family: Cormorant;
-  src: url(../fonts/Cormorant/Cormorant-VariableFont_wght.ttf);
+  src: url(./_fonts/Cormorant/Cormorant-VariableFont_wght.ttf);
 }
 
 @font-face {
   font-family: Ysabeau;
-  src: url(../fonts/Ysabeau/Ysabeau-VariableFont_wght.ttf);
+  src: url(./_fonts/Ysabeau/Ysabeau-VariableFont_wght.ttf);
 }
 
 @font-face {
   font-family: YsabeauSC;
-  src: url(../fonts/Ysabeau_SC/YsabeauSC-VariableFont_wght.ttf);
+  src: url(./_fonts/Ysabeau_SC/YsabeauSC-VariableFont_wght.ttf);
 }
 
 @font-face {
   font-family: YsabeauInfant;
-  src: url(../fonts/Ysabeau_Infant/YsabeauInfant-VariableFont_wght.ttf);
+  src: url(./_fonts/Ysabeau_Infant/YsabeauInfant-VariableFont_wght.ttf);
 }
 
 @font-face {
   font-family: Inconsolata;
-  src: url(../fonts/Inconsolata/Inconsolata-VariableFont_wght.ttf);
+  src: url(./_fonts/Inconsolata/Inconsolata-VariableFont_wght.ttf);
 }
 
 @font-face {
   font-family: JetBrainsMono;
-  src: url(../fonts/JetBrainsMono/JetBrains_Mono-VariableFont_wght.ttf);
+  src: url(./_fonts/JetBrains_Mono/JetBrainsMono-VariableFont_wght.ttf);
 }
 
 /*
