--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ body {
     font-family: "Cormorant", "Garamond", serif;
     font-size:1.25em;
     background-color: #f5f5f5;
-    margin: 0px 80px;
+    margin: 0;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
